manifests/configmaps-secrets.yaml
# Deployment that uses envFrom (configmap + secret)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-consumer
  namespace: default
  labels:
    app: config-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-consumer
  template:
    metadata:
      labels:
        app: config-consumer
    spec:
      containers:
        - name: app
          image: myregistry/config-consumer:v1.0.0
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d
              readOnly: true
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-config
---
# Deployment that also references shared-settings (tests shared configmap)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: another-consumer
  namespace: default
  labels:
    app: another-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: another-consumer
  template:
    metadata:
      labels:
        app: another-consumer
    spec:
      containers:
        - name: app
          image: myregistry/another-consumer:v1.0.0
          ports:
            - containerPort: 3000
